Archive2/74/083e9916751883/output
main.cpp:10:1: error: static assertion failed: OOPS
 static_assert(std::is_pod<POD>::value, "OOPS");
 ^
